fix hobbies wrap

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -275,6 +275,7 @@
 				.list {
 					display: flex;
 					gap: 15px;
+					flex-wrap: wrap;
 
 					.item {
 						padding: 5px 15px;
